application-server/src/main/resources/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: <NAME>
    version: <VERSION>
  name: <NAME>
  namespace: <NAMESPACE>
spec:
  replicas: <REPLICAS>
  selector:
    matchLabels:
      app: <NAME>
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: <NAME>
        version: <VERSION>
    spec:
      containers:
        - image: <IMAGE_URL>
          imagePullPolicy: Always
          name: <NAME>
          ports:
            - containerPort: <CONTAINER_PORT>
              protocol: TCP
      dnsPolicy: ClusterFirst
