application-server/src/main/resources/virtualservice-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: <VIRTUAL_SERVICE_NAME>
spec:
  host:
    - <HOST>
  gateways:
    - default-gateway
  http:
    - match:
      route:
        - destination:
            host: <SVC_HOST>
            subset: <VERSION>
